tools/tests/errors/surf_type_10.experr
type 'Float' does not support 'in'
